Tue Mar 22 10:40:21 2005  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * DAnCE/examples/Swapping/Sender/Sender_exec.cpp:

          Made changes to fix compiler warnings.

Tue Mar 22 10:26:18 2005  Will Otte <wotte@dre.vanderbilt.edu>
	* DAnCE/Config_Handlers/CCD_Handler.cpp

	Silenced an error in VC6 that occured because it couldn't obey
	some simple scope rules.

	* DAnCE/Config_Handlers/XSCRT/Elements.hpp

	Silenced a warning in VC6 debug builds relating to debug identifiers being
	too long.

Tue Mar 22 08:44:03 2005  Will Otte <wotte@dre.vanderbilt.edu>

	* DAnCE/ciao/Container_Base.cpp

	Silenced a warning.

Tue Mar 22 08:05:57 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * CCF/CCF/IDL2/IDL2.vcproj:

          Added new ValueTypeFactory files to SemanticAction and new
          ValueTypeMember files to SemanticGraph.

Tue Mar 22 00:13:56 2005  Will Otte <wotte@dre.vanderbilt.edu>

	* DAnCE/Config_Handlers/Any_Handler.cpp

	Silenced warnings present in GCC >3 builds.

	* DAnCE/Config_Handlers/CCD_Handler.h
	* DAnCE/Config_Handlers/Config_Handlers.mpc
	* DAnCE/Config_Handlers/IDD_Handler.cpp
	* DAnCE/Config_Handlers/Property_Handler.h
	* DAnCE/Config_Handlers/Req_Handler.h
	* DAnCE/Config_Handlers/XML_Error_Handler.h
	* DAnCE/Config_Handlers/XML_File_Intf.h

	Silenced a few warnings present in the Fuzz build.

Mon Mar 21 08:47:44 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * CCF/CCF/IDL2/IDL2.vcproj:

          Added the new ValuetypeMember files in SemanticAction to
          the project.

Mon Mar 21 16:25:07 2005  Boris Kolpackov  <boris@kolpackov.net>

	* CCF/CCF/IDL2/SemanticAction/Impl/ValueTypeMember.cpp:
	* CCF/CCF/IDL2/SemanticAction/Impl/ValueTypeMember.hpp:

	Finished "full support" for valuetype members. It also
	adds "full support" for eventtype members since it just
	re-uses valuetype's rules.


	* CCF/CCF/IDL2/Parser.cpp:
	* CCF/CCF/IDL2/Parser.hpp:
	* CCF/CCF/IDL2/SemanticAction/ValueTypeFactory.hpp: