@@ -1,3 +1,12 @@
+Tue Mar 22 11:45:57 2005  Will Otte <wotte@dre.vanderbilt.edu>
+	
+	* DAnCE/Config_Handlers/ADD_Handler.cpp
+	* DAnCE/Config_Handlers/Any_Handler.cpp
+	* DAnCE/Config_Handlers/CCD_Handler.cpp
+	* DAnCE/Config_Handlers/XSCRT/Elements.hpp
+	
+	Changes to accomodate broken compilers (VC6).
+	
 Tue Mar 22 10:40:21 2005  Jaiganesh B  <jai@dre.vanderbilt.edu>
 
         * DAnCE/examples/Swapping/Sender/Sender_exec.cpp:
